--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -68,33 +68,42 @@
     "./cn": "./src/utils/cn.ts",
     "./truncate": "./src/utils/truncate.ts",
     "./hooks": "./src/hooks/index.ts",
-    "./quantity-input": "./src/components/quantity-input.tsx"
+    "./quantity-input": "./src/components/quantity-input.tsx",
+    "./conversation": "./src/components/conversation.tsx",
+    "./loader": "./src/components/loader.tsx",
+    "./message": "./src/components/message.tsx",
+    "./prompt-input": "./src/components/prompt-input.tsx",
+    "./reasoning": "./src/components/reasoning.tsx",
+    "./response": "./src/components/response.tsx",
+    "./sources": "./src/components/sources.tsx",
+    "./suggestion": "./src/components/suggestion.tsx"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
-    "@radix-ui/react-collapsible": "^1.1.11",
+    "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-context-menu": "^2.2.15",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
-    "@radix-ui/react-hover-card": "^1.1.14",
+    "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-radio-group": "^1.3.7",
-    "@radix-ui/react-scroll-area": "^1.2.9",
-    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.14",
-    "@radix-ui/react-tooltip": "^1.2.7",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@tiptap/extension-bold": "^2.12.0",
     "@tiptap/extension-link": "^2.12.0",
     "@tiptap/extension-placeholder": "^2.12.0",
@@ -103,6 +112,7 @@
     "@tiptap/react": "^2.12.0",
     "@tiptap/starter-kit": "^2.12.0",
     "@uidotdev/usehooks": "^2.4.1",
+    "ai": "^5.0.30",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.1.1",
@@ -110,15 +120,18 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "jsonfile": "^6.1.0",
-    "lucide-react": "^0.511.0",
+    "lucide-react": "^0.542.0",
     "postcss": "^8.5.3",
     "react-day-picker": "9.8.0",
     "react-icons": "^5.5.0",
     "react-number-format": "^5.4.4",
+    "react-syntax-highlighter": "^15.6.6",
     "recharts": "^2.15.3",
+    "streamdown": "^1.1.8",
     "tailwind-merge": "2.5.3",
     "tailwindcss": "^3.4.13",
     "tailwindcss-animate": "^1.0.7",
+    "use-stick-to-bottom": "^1.1.1",
     "vaul": "^1.1.2"
   },
   "devDependencies": {
