--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.23",
+    "@ai-sdk/rsc": "^1.0.30",
     "@date-fns/tz": "^1.4.1",
     "@date-fns/utc": "^2.1.1",
     "@hookform/resolvers": "^5.1.1",
@@ -59,8 +60,8 @@
     "papaparse": "^5.5.3",
     "pdfjs-dist": "4.8.69",
     "react": "19.1.1",
-    "react-dom": "19.1.1",
     "react-colorful": "^5.6.1",
+    "react-dom": "19.1.1",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.57.0",
     "react-hotkeys-hook": "^5.1.0",
