--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,10 +13,11 @@
     "./trpc/routers/_app": "./src/trpc/routers/_app.ts"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^1.3.22",
+    "@ai-sdk/openai": "^2.0.23",
+    "@ai-sdk/react": "^2.0.30",
     "@hono/trpc-server": "^0.4.0",
-    "@hono/zod-openapi": "^0.19.8",
-    "@hono/zod-validator": "^0.7.0",
+    "@hono/zod-openapi": "^1.1.0",
+    "@hono/zod-validator": "^0.7.2",
     "@midday/cache": "workspace:*",
     "@midday/categories": "workspace:*",
     "@midday/db": "workspace:*",
@@ -32,14 +33,14 @@
     "@midday/notifications": "workspace:*",
     "@midday/supabase": "workspace:*",
     "@polar-sh/sdk": "^0.34.9",
-    "@scalar/hono-api-reference": "^0.9.4",
+    "@scalar/hono-api-reference": "^0.9.16",
     "@sindresorhus/slugify": "^2.2.1",
     "@trigger.dev/sdk": "4.0.2",
     "@trpc/server": "^11.5.0",
-    "ai": "^4.3.19",
+    "ai": "^5.0.30",
     "camelcase-keys": "^9.1.3",
     "date-fns": "^4.1.0",
-    "hono": "^4.8.12",
+    "hono": "^4.9.6",
     "hono-rate-limiter": "^0.4.2",
     "jose": "^6.0.11",
     "nanoid": "^5.1.5",
@@ -48,10 +49,10 @@
     "snakecase-keys": "^8.0.1",
     "superjson": "^2.2.2",
     "uuid": "^11.1.0",
-    "zod": "3.25.64",
-    "zod-openapi": "^4.2.4"
+    "zod": "4.1.5",
+    "zod-openapi": "^5.4.0"
   },
   "devDependencies": {
-    "@types/bun": "^1.2.16"
+    "@types/bun": "^1.2.21"
   }
 }
