--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -24,9 +24,10 @@
     "ai": "5.0.28",
     "camelcase-keys": "^9.1.3",
     "heic-convert": "1.2.4",
-    "trigger.dev": "4.0.2",
     "node-xlsx": "^0.24.0",
-    "sharp": "0.34.1"
+    "sharp": "0.34.1",
+    "trigger.dev": "4.0.2",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@types/heic-convert": "2.1.0",
