--- a/apps/engine/package.json
+++ b/apps/engine/package.json
@@ -21,7 +21,7 @@
     "typesense": "^2.0.3",
     "workers-ai-provider": "^0.6.1",
     "xior": "^0.7.8",
-    "zod": "3.25.64"
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250803.0",
