--- a/packages/app-store/package.json
+++ b/packages/app-store/package.json
@@ -14,7 +14,7 @@
     "@slack/bolt": "^4.4.0",
     "@slack/web-api": "^7.9.2",
     "ai": "^4.3.19",
-    "zod": "3.25.64",
+    "zod": "^4.1.5",
     "@midday/jobs": "workspace:*"
   },
   "devDependencies": {
