Downgrade engine zod

--- a/apps/engine/package.json
+++ b/apps/engine/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@hono/zod-openapi": "^0.19.8",
     "@hono/zod-validator": "^0.7.0",
-    "hono": "^4.8.12",
+    "hono": "4.8.12",
     "jose": "^6.0.11",
     "plaid": "^36.0.0",
     "typesense": "^2.0.3",
