--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -15,8 +15,8 @@
     "test:watch": "bun test --watch"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^2.0.27",
-    "@ai-sdk/rsc": "^1.0.35",
+    "@ai-sdk/openai": "^2.0.30",
+    "@ai-sdk/rsc": "^1.0.44",
     "@date-fns/tz": "^1.4.1",
     "@date-fns/utc": "^2.1.1",
     "@hookform/resolvers": "^5.1.1",
@@ -44,9 +44,9 @@
     "@trigger.dev/sdk": "4.0.2",
     "@trpc/client": "^11.5.1",
     "@trpc/tanstack-react-query": "^11.5.1",
-    "ai": "^5.0.37",
-    "ai-sdk-devtools": "^0.5.0",
-    "ai-sdk-zustand": "^0.1.0",
+    "ai": "^5.0.44",
+    "@ai-sdk-tools/devtools": "^0.6.0",
+    "@ai-sdk-tools/store": "^0.1.0",
     "change-case": "^5.4.4",
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
@@ -54,7 +54,7 @@
     "geist": "^1.5.1",
     "little-date": "^1.0.0",
     "lottie-react": "^2.4.1",
-    "next": "15.5.2",
+    "next": "15.5.3",
     "next-international": "1.3.1",
     "next-safe-action": "^8.0.11",
     "next-themes": "^0.4.6",
