--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -45,8 +45,9 @@
     "@trpc/client": "^11.5.1",
     "@trpc/tanstack-react-query": "^11.5.1",
     "ai": "^5.0.44",
-    "@ai-sdk-tools/devtools": "^0.6.0",
-    "@ai-sdk-tools/store": "^0.1.0",
+    "@ai-sdk-tools/devtools": "^0.6.1",
+    "@ai-sdk-tools/store": "^0.1.2",
+    "@ai-sdk-tools/artifacts": "^0.3.0",
     "change-case": "^5.4.4",
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
