--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,6 +13,7 @@
     "./trpc/routers/_app": "./src/trpc/routers/_app.ts"
   },
   "dependencies": {
+    "@ai-sdk-tools/artifacts": "^0.3.0",
     "@ai-sdk/openai": "^2.0.32",
     "@ai-sdk/react": "^2.0.45",
     "@hono/trpc-server": "^0.4.0",
