--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -15,6 +15,9 @@
     "test:watch": "bun test --watch"
   },
   "dependencies": {
+    "@ai-sdk-tools/artifacts": "^0.4.0-beta.1",
+    "@ai-sdk-tools/devtools": "^0.6.1",
+    "@ai-sdk-tools/store": "^0.1.2",
     "@ai-sdk/openai": "^2.0.32",
     "@ai-sdk/rsc": "^1.0.45",
     "@date-fns/tz": "^1.4.1",
@@ -45,9 +48,6 @@
     "@trpc/client": "^11.5.1",
     "@trpc/tanstack-react-query": "^11.5.1",
     "ai": "^5.0.45",
-    "@ai-sdk-tools/devtools": "^0.6.1",
-    "@ai-sdk-tools/store": "^0.1.2",
-    "@ai-sdk-tools/artifacts": "^0.3.0",
     "change-case": "^5.4.4",
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
