--- a/.github/workflows/production-dashboard.yml
+++ b/.github/workflows/production-dashboard.yml
@@ -4,7 +4,7 @@ env:
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_DASHBOARD }}
   TURBO_TOKEN: ${{ secrets.VERCEL_TOKEN }}
   TURBO_TEAM: ${{ secrets.VERCEL_ORG_ID }}
-  NODE_OPTIONS="--max-old-space-size=8192"
+  NODE_OPTIONS="--max-old-space-size=8192
 on:
   push:
     branches:
