--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -15,9 +15,9 @@
     "test:watch": "bun test --watch"
   },
   "dependencies": {
-    "@ai-sdk-tools/artifacts": "^0.4.0-beta.1",
-    "@ai-sdk-tools/devtools": "^0.6.1",
-    "@ai-sdk-tools/store": "^0.1.2",
+    "@ai-sdk-tools/artifacts": "beta",
+    "@ai-sdk-tools/devtools": "beta",
+    "@ai-sdk-tools/store": "beta",
     "@ai-sdk/openai": "^2.0.32",
     "@ai-sdk/rsc": "^1.0.45",
     "@date-fns/tz": "^1.4.1",
