--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,11 +13,11 @@
     "./trpc/routers/_app": "./src/trpc/routers/_app.ts"
   },
   "dependencies": {
-    "@ai-sdk-tools/artifacts": "^0.3.0",
+    "@ai-sdk-tools/artifacts": "beta",
     "@ai-sdk/openai": "^2.0.32",
-    "@ai-sdk/react": "^2.0.45",
+    "@ai-sdk/react": "^2.0.47",
     "@hono/trpc-server": "^0.4.0",
-    "@hono/zod-openapi": "^1.1.1",
+    "@hono/zod-openapi": "^1.1.2",
     "@hono/zod-validator": "^0.7.3",
     "@midday/cache": "workspace:*",
     "@midday/categories": "workspace:*",
@@ -38,10 +38,10 @@
     "@sindresorhus/slugify": "^2.2.1",
     "@trigger.dev/sdk": "4.0.2",
     "@trpc/server": "^11.5.1",
-    "ai": "^5.0.45",
+    "ai": "^5.0.47",
     "camelcase-keys": "^10.0.0",
     "date-fns": "^4.1.0",
-    "hono": "^4.9.7",
+    "hono": "^4.9.8",
     "hono-rate-limiter": "^0.4.2",
     "jose": "^6.0.11",
     "nanoid": "^5.1.5",
