--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -77,7 +77,8 @@
     "./response": "./src/components/response.tsx",
     "./sources": "./src/components/sources.tsx",
     "./suggestion": "./src/components/suggestion.tsx",
-    "./text-shimmer": "./src/components/text-shimmer.tsx"
+    "./text-shimmer": "./src/components/text-shimmer.tsx",
+    "./text-effect": "./src/components/text-effect.tsx"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.11",
