--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -53,6 +53,8 @@
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.12",
     "geist": "^1.5.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "little-date": "^1.0.0",
     "lottie-react": "^2.4.1",
     "next": "15.5.3",
@@ -86,6 +88,7 @@
   "devDependencies": {
     "@midday/tsconfig": "workspace:*",
     "@types/file-saver": "^2.0.7",
+    "@types/html2canvas": "^1.0.0",
     "@types/node": "^24.3.1",
     "@types/papaparse": "^5.3.16",
     "@types/react": "19.1.12",
