--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -132,7 +132,7 @@
     "react-number-format": "^5.4.4",
     "react-syntax-highlighter": "^15.6.6",
     "recharts": "^2.15.3",
-    "streamdown": "^1.3.0",
+    "streamdown": "1.2.0",
     "tailwind-merge": "2.5.3",
     "tailwindcss": "^3.4.13",
     "tailwindcss-animate": "^1.0.7",
