--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -22,6 +22,9 @@
     "@ai-sdk/rsc": "^1.0.54",
     "@date-fns/tz": "^1.4.1",
     "@date-fns/utc": "^2.1.1",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^5.2.2",
     "@midday/api": "workspace:*",
     "@midday/app-store": "workspace:*",
